--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: var(--overpass);
 }
 
 body {
-	font-family: var(--overpass);
+	background-color: var(--very-dark-blue);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -28,30 +29,45 @@ body {
 
 h1 {
 	font-size: 1.5rem;
+	color: white;
 }
 p {
 	font-size: 0.93rem;
+	line-height: 1.5;
+	color: var(--medium-grey);
 }
 
 main {
+	background: radial-gradient(
+		400px 400px at top center,
+		hsl(215, 27%, 15%),
+		hsl(215, 27%, 11%)
+	);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	width: 28.3vw;
-	min-width: 335px;
-	max-width: 375px;
+	min-width: 375px;
+	max-width: 400px;
 	height: 51vh;
-	min-height: 335px;
-	max-height: 375px;
+	min-height: 414px;
+	max-height: 415px;
 	border: solid 2px black;
 	border-radius: 20px;
-	padding: 2%;
+	border: none;
+	padding: 28px 32px;
 	/* padding: 4% 3%; */
 }
 
 #star {
-	min-width: 1.25vw;
-	min-height: 1.75vh;
+	min-width: 15px;
+	max-width: 15.5px;
+	min-height: 15px;
+	max-height: 15.5px;
+}
+
+#title {
+	padding-top: 2%;
 }
 
 #rating {
@@ -61,17 +77,46 @@ main {
 }
 
 .circle {
+	background-color: hsla(217, 12%, 63%, 0.07);
+	color: white;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 45px;
-	height: 45px;
+	width: 50px;
+	height: 50px;
 	border: solid 2px black;
 	border-radius: 50%;
+	border: none;
+}
+
+.rate:hover {
+	background-color: var(--orange);
+}
+.rate:active {
+	background-color: var(--medium-grey);
 }
 
 #btn {
+	letter-spacing: 2px;
 	padding: 15px;
 	border-radius: 30px;
 	border-style: none;
+	background-color: var(--orange);
+	color: white;
+}
+#btn:hover {
+	background-color: white;
+	color: var(--orange);
+	animation: normal;
+}
+
+.attribution {
+	margin-top: 15px;
+	color: white;
+	font-size: 11px;
+	text-align: center;
+}
+
+.attribution a {
+	color: hsl(228, 45%, 44%);
 }
