--- a/style.css
+++ b/style.css
@@ -56,8 +56,7 @@ main {
 
 #rating-page {
 	height: 100%;
-	/* display: flex; */
-	display: none;
+	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 28px 32px;
@@ -65,8 +64,7 @@ main {
 
 #thank-you-page {
 	height: 100%;
-	display: flex;
-	/* display: none; */
+	display: none;
 	flex-direction: column;
 	text-align: center;
 	align-items: center;
@@ -123,11 +121,12 @@ main {
 .rate:hover {
 	background-color: var(--orange);
 }
+.active,
 .rate:active {
 	background-color: var(--medium-grey);
 }
 
-#btn {
+#btn-submit {
 	letter-spacing: 2px;
 	padding: 15px;
 	border-radius: 30px;
@@ -135,7 +134,7 @@ main {
 	background-color: var(--orange);
 	color: white;
 }
-#btn:hover {
+#btn-submit:hover {
 	background-color: white;
 	color: var(--orange);
 	animation: normal;
