--- a/style.css
+++ b/style.css
@@ -43,15 +43,14 @@ main {
 		hsl(216, 25%, 12%)
 	);
 	width: 28.3vw;
-	min-width: 375px;
-	max-width: 400px;
-	height: 51vh;
-	min-height: 414px;
-	max-height: 415px;
+	min-width: 400px;
+	max-width: 415px;
+	height: 50vh;
+	min-height: 399px;
+	max-height: 400px;
 	border: solid 2px black;
 	border-radius: 20px;
 	border: none;
-	/* padding: 4% 3%; */
 }
 
 #rating-page {
@@ -96,7 +95,7 @@ main {
 }
 
 #title {
-	padding-top: 2%;
+	padding-bottom: 4%;
 }
 
 #rating {
@@ -111,8 +110,8 @@ main {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 47px;
-	height: 47px;
+	width: 50px;
+	height: 50px;
 	border: solid 2px black;
 	border-radius: 50%;
 	border: none;
@@ -128,7 +127,7 @@ main {
 
 #btn-submit {
 	letter-spacing: 2px;
-	padding: 15px;
+	padding: 12px;
 	border-radius: 30px;
 	border-style: none;
 	background-color: var(--orange);
@@ -149,4 +148,27 @@ main {
 
 .attribution a {
 	color: hsl(228, 45%, 44%);
+}
+
+@media screen and (max-width: 600px) {
+	h1 {
+		font-size: 1.35rem;
+	}
+	p {
+		font-size: 0.895rem;
+	}
+
+	main {
+		min-width: 330px;
+		min-height: 365px;
+	}
+
+	#rating-page {
+		padding: 32px 24px;
+	}
+
+	.circle {
+		width: 43px;
+		height: 43px;
+	}
 }
